--- a/user/waybar/style.css
+++ b/user/waybar/style.css
@@ -4,6 +4,12 @@
     font-size: 16px;
 }
 
+tooltip {
+    background-color: rgba(0, 0, 0, 0.85);
+    /* border: none; */
+    border-radius: 2;
+}
+
 window#waybar {
     background-color: rgba(0, 0, 0, 0.85);
     color: #ffffff;
