--- a/user/firefox/transparentUserChrome.css
+++ b/user/firefox/transparentUserChrome.css
@@ -25,7 +25,15 @@ window {
     background: transparent !important;
 }
 
+#sidebar-header {
+    border-bottom: none !important;
+}
+
 :root {
     --tabpanel-background-color: transparent !important;
     --sidebar-background-color: transparent !important;
+    --in-content-page-background: transparent !important;
+    --in-content-table-background: rgba(0, 0, 0, 0.25) !important;
+    --in-content-table-header-background: rgba(0, 221, 255, 0.25) !important;
+    --in-content-table-header-color: white !important;
 }
